# reasonIF

./: .gitignore  README.md  pyproject.toml
data/: number_of_words_reference.json  reasonIF_dataset.json
src/: __init__.py  eval_core.py  eval_utils.py  inference_utils.py  main.py  utils.py
src/instructions/: instruction_checker.py  instruction_generator.py  instruction_registry.py  instruction_util.py
